corrected overflow problem with input boxs

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,9 +53,13 @@ body {
     width: 60%;
     padding: 0rem 1rem;
 }
-
+.welcome-line{
+    height: 1px;
+    margin: 0rem 5rem;
+    color: rgba(128, 128, 128, 0.274);
+}
 .form-input h1 {
-    margin-top: 10px;
+    margin-top: 15px;
     font-size: 2rem;
 }
 
